fix bug overflow

--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -8,6 +8,7 @@
     width: 345px;
     height: 90vh;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-right: 10px;
     padding-left: 10px;
 }
